# helium

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  api.md  docker-compose.yml  readme.md  run_docker_container.bat
.github/workflows/: cached.yml  main-ci.yml  test
miniodata/.minio.sys/: format.json
miniodata/.minio.sys/config/: config.json
miniodata/.minio.sys/config/iam/: format.json
miniotest/: docker-compose.yml  nginx.conf
src/: enums.rs  main.rs  structs.rs  util.rs
src/routes/: delete.rs  fetch.rs  info.rs  mod.rs  upload.rs
src/s3/: download.rs  mod.rs  upload.rs  util.rs
