[package]
name = "helium"
version = "0.1.0"
authors = ["cloudybyte <clby@protonmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/cloudybyte/helium"


[dependencies]
actix-multipart = "0.3"
actix-web = "3"
futures = "0.3.1"
sanitize-filename = "0.2"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
rust-s3 = "0.26.0"
envy = "0.4"
serde = { version = "1.0.115", features = ["derive"] }